----------------------------------------------------------------------
 OmegaT 3.1.0 
----------------------------------------------------------------------
  29 Enhancements
   6 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.0 vs. 3.0.8 update 4

  Implemented requests:

  - Add facility for conflict resolution during team sync
  https://sourceforge.net/p/omegat/feature-requests/950/

  - Find and Replace (poss. with regex) 
  https://sourceforge.net/p/omegat/feature-requests/66/

  - Search in comments
  https://sourceforge.net/p/omegat/feature-requests/943/

  - Show XLIFF multiple trans-unit notes 
  https://sourceforge.net/p/omegat/feature-requests/949/

  - Allow custom sorting order of project files
  https://sourceforge.net/p/omegat/feature-requests/788/

  - Improve exception processing in console mode
  https://sourceforge.net/p/omegat/bugs/607/

  - Extend project statistics with the number of files in which they occur
  https://sourceforge.net/p/omegat/feature-requests/910/

  - Mark auto-populated segments 
  https://sourceforge.net/p/omegat/feature-requests/963/

  - Priority TM to override project_save.tmx 
  https://sourceforge.net/p/omegat/feature-requests/957/

  - Localisation support for scripts 
  https://sourceforge.net/p/omegat/feature-requests/975/

  - Event for scripts 
  https://sourceforge.net/p/omegat/feature-requests/976/

  Other enhancements:
  
  - If there is a selection When inserting a tag pair, the tags are
put on each side of the selection

  - Synchronisation does not occur anymore when creating translated
documents in team projects

  - The default character set for the PO filter is now UTF-8, as it
is the most common encoding for those files

  - The About dialog can now be resized

  - In the Mozilla DTD filter, an option allows to not
include untranslated strings in the target files 

  - In the bundle properties filter, an option allows to not